--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "produto-api",
   "version": "1.0.0",
   "description": "atividade para criação de um crud usando node e express",
-  "type": "module", 
+  "type": "module",
   "main": "y",
   "scripts": {
     "dev": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.10.0"
